# kinect_publisher

./: CMakeLists.txt  README.md  package.xml
launch/: clustering.launch  registration_classified.launch
scripts/: 10kscript.py  matching.py  object_classifier.py  object_classifier_roboflow.py
src/: image_writer.cpp  kinect_publisher.cpp  registration.cpp  rgb_depth_publisher.cpp
