<package format="2">
    <name>kinect_publisher</name>
    <version>0.0.0</version>
    <description>
    Making a minimal publisher from a kinectv2 
    </description>
    <maintainer email="adamfong888@gmail.com">Adam Fong</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>
    <build_depend>freenect2</build_depend>
    <build_depend>opencv</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rospy</exec_depend>
</package>